# wasm-snake

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  readme.md
assets/levels/: level01.txt  level02.txt  level03.txt
frontend/: README.md  index.html  package.json  vite.config.ts
frontend/src/: AudioManger.ts  Game.ts  main.ts  style.css
src/: board.rs  food.rs  game.rs  level.rs  lib.rs  snake.rs
